# call-e-dify-plugin

./: .difyignore  .gitignore  PRIVACY.md  README.md  main.py  manifest.yaml  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
provider/: call_e.py  call_e.yaml
tests/: test_client.py  test_plugin_metadata.py  test_provider_credentials.py
tools/: create_and_wait.py  create_and_wait.yaml  create_call.py  create_call.yaml  get_call.py  get_call.yaml
utils/: client.py
