[project]
name = "call-e-dify-plugin"
version = "0.1.4"
description = "CALL-E tools for Dify workflows and agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify_plugin>=0.9.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
